# tauri-plugin-media-toolkit

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  package.json
android/: build.gradle.kts
android/src/androidTest/java/: MediaEditorInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: MediaEditorPlugin.kt
android/src/test/java/: MediaEditorUnitTest.kt
examples/media-toolkit-example/: README.md  index.html  package.json
examples/media-toolkit-example/src/: App.css  App.tsx
examples/media-toolkit-example/src-tauri/: Cargo.toml  tauri.conf.json
examples/media-toolkit-example/src-tauri/capabilities/: default.json
examples/media-toolkit-example/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: MediaEditorPlugin.swift
ios/Tests/PluginTests/: MediaEditorPluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: cleanup_cache.toml  convert.toml  extract_audio.toml  get_media_info.toml  get_playback_status.toml  select_media_file.toml  trim.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  paths.rs
